--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "p": "prettier -w .",
-    "e": "eslint --ext js,ts,jsx,tsx ."
+    "e": "eslint --ext js,ts,jsx,tsx .",
+    "c": "tsc -b --verbose ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.7",
