--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "jest",
     "p": "prettier -w .",
     "e": "eslint --ext js,ts,jsx,tsx .",
     "c": "tsc -b --verbose ."
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.20.0",
+    "jest": "^28.1.3",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "@types/jest": "^28.1.6",
+    "nodemon": "^2.0.19",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "vite-tsconfig-paths": "^3.5.0"
   }
 }
