--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "t": "jest --verbose",
     "p": "prettier -w .",
     "e": "eslint --ext js,ts,jsx,tsx .",
-    "c": "tsc -b --verbose ."
+    "c": "tsc -b --verbose .",
+    "check": "tsc -b . && eslint --ext js,ts,jsx,tsx . && prettier -w . && jest --verbose"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
