--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "c": "tsc -b --verbose .",
     "check": "tsc -b . && eslint --ext js,ts,jsx,tsx . && prettier -w . && jest --verbose"
   },
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
+    "@types/jest": "^28.1.6",
+    "nodemon": "^2.0.19",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "vite-tsconfig-paths": "^3.5.0",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
@@ -24,12 +30,5 @@
     "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
-  },
-  "dependencies": {
-    "@types/jest": "^28.1.6",
-    "nodemon": "^2.0.19",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.9.1",
-    "vite-tsconfig-paths": "^3.5.0"
   }
 }
